# DepartureBoard

./: .gitignore  Cargo.toml  README.md
public/: index.html
public/css/: style.css
public/js/: client.js
src/: main.rs
src/lib/: config.rs  util.rs
