[package]
name = "web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
toml = "0.5.9"
lazy_static = "1.4.0"